--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -7,7 +7,7 @@
                 <div class="text-center mb-5">
                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
                     <h1 class="fw-bolder">Contáctanos</h1>
-                    <p class="lead fw-normal text-muted mb-0">Si nos das más información, encontraremos la solución adecuada</p>
+                    <p class="lead fw-normal text-muted mb-0">Si nos das más información, encontraremos la solución adecuada.</p>
                 </div>
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-8 col-xl-6">
