--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -1,109 +1,113 @@
-<main class="flex-shrink-0">          
-            <!-- Pricing section-->
-            <section class="bg-light py-5">
-                <div class="container px-5 my-5">
-                    <div class="text-center mb-5">
-                        <h1 class="fw-bolder">{{ptittle}}</h1>
-                        <p class="lead fw-normal text-muted mb-0">{{subtittle}}</p>
-                    </div>
-                    <div class="row gx-5 justify-content-center">
-                        <!-- Pricing card Básico-->
-                        <div class="col-lg-6 col-xl-4">
-                            <div class="card mb-5 mb-xl-0">
-                                <div class="card-body p-5">
-                                    <div class="small text-uppercase fw-bold text-muted">Básico</div>
-                                    <div class="mb-3">
-                                        <span class="display-4 fw-bold">$4.99</span>
-                                        <span class="text-muted">/ mensuales.</span>
-                                    </div>
-                                    <ul class="list-unstyled mb-4">
-                                        <li class="mb-2">
-                                            <i class="bi bi-check text-primary"></i>
-                                            <strong>1 Dispositivo</strong>
-                                        </li>
-                                        <li class="mb-2">
-                                            <i class="bi bi-check text-primary"></i>
-                                            Calidad de video <b>Buena</b>
-                                        </li>
-                                        <li class="mb-2">
-                                            <i class="bi bi-check text-primary"></i>
-                                            Resolución 720p
-                                        </li>
-                                        <li class="mb-2">
-                                            <i class="bi bi-check text-primary"></i>
-                                            Ve Netflix en tu TV, computadora, celular y tablet
-                                        </li>
-                                    </ul>
-                                    <div class="d-grid"><a class="btn btn-outline-primary" href="#!">Elegir Plan</a></div>
-                                </div>
+<head>
+    <link rel="stylesheet" href="pricing.component.css">
+</head>
+<main class="flex-shrink-0">
+    <!-- Pricing section-->
+    <section class="bg-light py-5">
+        <div class="container px-5 my-5">
+            <div class="text-center mb-5">
+                <h1 class="fw-bolder">{{ptittle}}</h1>
+                <p class="lead fw-normal text-muted mb-0">{{subtittle}}</p>
+            </div>
+            <div class="row gx-5 justify-content-center">
+                <!-- Pricing card Básico-->
+                <div class="col-lg-6 col-xl-4">
+                    <div class="card mb-5 mb-xl-0">
+                        <div class="card-body p-5">
+                            <div class="small text-uppercase fw-bold text-muted">Básico</div>
+                            <div class="mb-3">
+                                <span class="display-4 fw-bold">$4.99</span>
+                                <span class="text-muted">/ mensuales.</span>
                             </div>
-                        </div>
-                        <!-- Pricing card pro-->
-                        <div class="col-lg-6 col-xl-4">
-                            <div class="card mb-5 mb-xl-0">
-                                <div class="card-body p-5">
-                                    <div class="small text-uppercase fw-bold">
-                                        <i class="bi bi-star-fill text-warning"></i>
-                                        Premium
-                                    </div>
-                                    <div class="mb-3">
-                                        <span class="display-4 fw-bold">$10.99</span>
-                                        <span class="text-muted">/ mensuales.</span>
-                                    </div>
-                                    <ul class="list-unstyled mb-4">
-                                        <li class="mb-2">
-                                            <i class="bi bi-check text-primary"></i>
-                                            <strong>4 Dispositivos</strong>
-                                        </li>
-                                        <li class="mb-2">
-                                            <i class="bi bi-check text-primary"></i>
-                                            Calidad de video <b>Optima</b>
-                                        </li>
-                                        <li class="mb-2">
-                                            <i class="bi bi-check text-primary"></i>
-                                            Resolución  4K+HDR
-                                        </li>
-                                        <li class="mb-2">
-                                            <i class="bi bi-check text-primary"></i>
-                                            Ve Netflix en tu TV, computadora, celular y tablet
-                                        </li>
-                                    </ul>
-                                    <div class="d-grid"><a class="btn btn-primary" href="#!">Elegir Plan</a></div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Pricing card enterprise-->
-                        <div class="col-lg-6 col-xl-4">
-                            <div class="card">
-                                <div class="card-body p-5">
-                                    <div class="small text-uppercase fw-bold text-muted">Estándar</div>
-                                    <div class="mb-3">
-                                        <span class="display-4 fw-bold">$7.99</span>
-                                        <span class="text-muted">/ mensuales.</span>
-                                    </div>
-                                    <ul class="list-unstyled mb-4">
-                                        <li class="mb-2">
-                                            <i class="bi bi-check text-primary"></i>
-                                            <strong>2 Dispositivos</strong>
-                                        </li>
-                                        <li class="mb-2">
-                                            <i class="bi bi-check text-primary"></i>
-                                            Calidad de video <b>Mejor</b>
-                                        </li>
-                                        <li class="mb-2">
-                                            <i class="bi bi-check text-primary"></i>
-                                            Resolución 1080p
-                                        </li>
-                                        <li class="mb-2">
-                                            <i class="bi bi-check text-primary"></i>
-                                            Ve Netflix en tu TV, computadora, celular y tablet
-                                        </li>
-                                    </ul>
-                                    <div class="d-grid"><a class="btn btn-outline-primary" href="#!">Elegir Plan</a></div>
-                                </div>
-                            </div>
+                            <ul class="list-unstyled mb-4">
+                                <li>
+                                    <i class="bi bi-check text-primary"></i>Juegos móviles, series y películas; sin
+                                    publicidad y sin límite
+                                </li>
+                                <li>
+                                    <i class="bi bi-check text-primary"></i>Puedes ver contenido en 1&nbsp;<a
+                                        href="https://devices.netflix.com/">dispositivo compatible</a>&nbsp;a la vez
+                                </li>
+                                <li>
+                                    <i class="bi bi-check text-primary"></i>Puedes ver en HD
+                                </li>
+                                <li>
+                                    <i class="bi bi-check text-primary"></i><a
+                                        href="https://help.netflix.com/es/node/54816">Puedes descargar
+                                        contenido</a>&nbsp;en 1 dispositivo compatible a la vez
+                                </li>
+                            </ul>
+                            <div class="d-grid"><a class="btn btn-primary" href="https://www.netflix.com/signup/planform">Elegir Plan</a></div>
                         </div>
                     </div>
                 </div>
-            </section>
+                <!-- Pricing card pro-->
+                <div class="col-lg-6 col-xl-4">
+                    <div class="card mb-5 mb-xl-0">
+                        <div class="card-body p-5">
+                            <div class="small text-uppercase fw-bold">
+                                <i class="bi bi-star-fill text-warning"></i>
+                                Premium
+                            </div>
+                            <div class="mb-3">
+                                <span class="display-4 fw-bold">$10.99</span>
+                                <span class="text-muted">/ mensuales.</span>
+                            </div>
+                            <ul class="list-unstyled mb-4">
+                                <li class="mb-2">
+                                    <i class="bi bi-check text-primary"></i>Juegos móviles, series y películas; sin publicidad y sin límite
+                                </li>
+                                <li class="mb-2">
+                                    <i class="bi bi-check text-primary"></i>Puedes ver contenido en 4&nbsp;<a href="https://devices.netflix.com/">dispositivos compatibles</a>&nbsp;a la vez
+                                </li>
+                                <li class="mb-2">
+                                    <i class="bi bi-check text-primary"></i>Puedes ver en Ultra HD
+                                </li>
+                                <li class="mb-2">
+                                    <i class="bi bi-check text-primary"></i><a href="https://help.netflix.com/es/node/54816">Puedes descargar contenido&nbsp;</a>en 6 dispositivos compatibles a la vez
+                                </li>
+                                <li class="mb-2">
+                                    <i class="bi bi-check text-primary"></i>Opción para agregar hasta 2&nbsp;<a href="https://help.netflix.com/es/node/123279">miembros extras</a>&nbsp;que no vivan contigo
+                                </li>
+                                <li class="mb-2">
+                                    <i class="bi bi-check text-primary"></i><a href="https://help.netflix.com/es/node/126405">Audio espacial de Netflix</a>
+                                </li>
+                            </ul>
+                            <div class="d-grid"><a class="btn btn-primary" href="https://www.netflix.com/signup/planform">Elegir Plan</a></div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Pricing card enterprise-->
+                <div class="col-lg-6 col-xl-4">
+                    <div class="card">
+                        <div class="card-body p-5">
+                            <div class="small text-uppercase fw-bold text-muted">Estándar</div>
+                            <div class="mb-3">
+                                <span class="display-4 fw-bold">$7.99</span>
+                                <span class="text-muted">/ mensuales.</span>
+                            </div>
+                            <ul class="list-unstyled mb-4">
+                                <li class="mb-2">
+                                    <i class="bi bi-check text-primary"></i>Juegos móviles, series y películas; sin publicidad y sin límite
+                                </li>
+                                <li class="mb-2">
+                                    <i class="bi bi-check text-primary"></i>Puedes ver contenido en 2&nbsp;<a href="https://devices.netflix.com/">dispositivos compatibles</a>&nbsp;a la vez
+                                </li>
+                                <li class="mb-2">
+                                    <i class="bi bi-check text-primary"></i>Puedes ver en Full HD
+                                </li>
+                                <li class="mb-2">
+                                    <i class="bi bi-check text-primary"></i><a href="https://help.netflix.com/es/node/54816">Puedes descargar contenido&nbsp;</a>en 2 dispositivos compatibles a la vez
+                                </li>
+                                <li class="mb-2">
+                                    <i class="bi bi-check text-primary"></i>Opción para agregar hasta 1&nbsp;<a href="https://help.netflix.com/es/node/123279">miembro extra</a>&nbsp;que no viva contigo
+                                </li>
+                            </ul>
+                            <div class="d-grid"><a class="btn btn-primary" href="https://www.netflix.com/signup/planform">Elegir Plan</a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
